receiver/force-app/main/receiver/objects/Organization__c/Organization__c.object-meta.xml
<CustomObject>
    <label>Organization</label>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>