receiver/force-app/main/receiver/objects/Organization__c/fields/Asleep_users__c.field-meta.xml
<CustomField>
    <fullName>Asleep_users__c</fullName>
    <description>Number of users that havent logged in in the last 90 days</description>
    <inlineHelpText>Number of users that havent logged in in the last 90 days</inlineHelpText>
    <label>Asleep users</label>
    <summaryFilterItems>
        <field>Asleep_user__c.Status__c</field>
        <operation>equals</operation>
        <value>Asleep</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Asleep_user__c.License__c</field>
        <operation>equals</operation>
        <value>Salesforce</value>
    </summaryFilterItems>
    <summaryForeignKey>Asleep_user__c.User_organization__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>