receiver/force-app/main/receiver/objects/Organization__c/fields/Last_connection__c.field-meta.xml
<CustomField>
    <fullName>Last_connection__c</fullName>
    <description>The date in which org last connected to the rest service</description>
    <inlineHelpText>The date in which org last connected to the rest service</inlineHelpText>
    <label>Last connection</label>
    <type>Date</type>
</CustomField>