receiver/force-app/main/receiver/objects/Organization__c/fields/Licenses_percentage__c.field-meta.xml
<CustomField>
    <fullName>Licenses_percentage__c</fullName>
    <description>The percentage value of used/total licenses of the organization</description>
    <formula>Used_licenses__c / Total_licenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage value of used/total licenses of the organization</inlineHelpText>
    <label>Licenses percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>