receiver/force-app/main/receiver/objects/Organization__c/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <description>The ID of the org</description>
    <inlineHelpText>The ID of the org</inlineHelpText>
    <label>Org ID DEPRECATED</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>