receiver/force-app/main/receiver/objects/Organization__c/fields/Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_URL__c</fullName>
    <description>Org&apos;s URL</description>
    <inlineHelpText>Org&apos;s URL</inlineHelpText>
    <label>Org URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>