receiver/force-app/main/receiver/objects/Organization__c/fields/Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>Organization_ID__c</fullName>
    <label>Organization ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>