receiver/force-app/main/receiver/objects/Organization__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Active&apos;</defaultValue>
    <description>The status of the org, depending on whether connection is working correctly, with errors or not at all.</description>
    <inlineHelpText>The status of the org, depending on whether connection is working correctly, with errors or not at all.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>