receiver/force-app/main/receiver/objects/Organization__c/fields/Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Status_Detail__c</fullName>
    <description>In this field is detailed any problem that has ocurred during the org connection if any</description>
    <inlineHelpText>In this field is detailed any problem that has ocurred during the org connection if any</inlineHelpText>
    <label>Status Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>