receiver/force-app/main/receiver/objects/Organization__c/fields/Total_licenses__c.field-meta.xml
<CustomField>
    <fullName>Total_licenses__c</fullName>
    <description>Total number of Salesforce licenses in the organization</description>
    <inlineHelpText>Total number of Salesforce licenses in the organization</inlineHelpText>
    <label>Total licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>