receiver/force-app/main/receiver/objects/Organization__c/fields/Used_licenses__c.field-meta.xml
<CustomField>
    <fullName>Used_licenses__c</fullName>
    <description>Used licenses in the organization</description>
    <inlineHelpText>Used licenses in the organization</inlineHelpText>
    <label>Used licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>