receiver/force-app/main/receiver/objects/Organization__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Username of the user that is configured in the connected app to extract data. Merely informative.</description>
    <inlineHelpText>Username of the user that is configured in the connected app to extract data. Merely informative</inlineHelpText>
    <label>User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>