receiver/force-app/main/receiver/objects/Organization__c/recordTypes/argentina_rt.recordType-meta.xml
<RecordType>
    <fullName>argentina_rt</fullName>
    <active>true</active>
    <label>argentina</label>
</RecordType>