receiver/force-app/main/receiver/objects/Organization__c/recordTypes/argentina_seguros_rt.recordType-meta.xml
<RecordType>
    <fullName>argentina_seguros_rt</fullName>
    <active>true</active>
    <label>argentina seguros</label>
</RecordType>