receiver/force-app/main/receiver/objects/Organization__c/recordTypes/cib_rt.recordType-meta.xml
<RecordType>
    <fullName>cib_rt</fullName>
    <active>true</active>
    <label>cib</label>
</RecordType>