receiver/force-app/main/receiver/objects/Organization__c/recordTypes/client_solutions_rt.recordType-meta.xml
<RecordType>
    <fullName>client_solutions_rt</fullName>
    <active>true</active>
    <label>client solutions</label>
</RecordType>