receiver/force-app/main/receiver/objects/Organization__c/recordTypes/colombia_enterprise_rt.recordType-meta.xml
<RecordType>
    <fullName>colombia_enterprise_rt</fullName>
    <active>true</active>
    <label>colombia enterprise</label>
</RecordType>