receiver/force-app/main/receiver/objects/Organization__c/recordTypes/colombia_retail_rt.recordType-meta.xml
<RecordType>
    <fullName>colombia_retail_rt</fullName>
    <active>true</active>
    <label>colombia retail</label>
</RecordType>