receiver/force-app/main/receiver/objects/Organization__c/recordTypes/espana_retail_rt.recordType-meta.xml
<RecordType>
    <fullName>espana_retail_rt</fullName>
    <active>true</active>
    <label>españa retail</label>
</RecordType>