receiver/force-app/main/receiver/objects/Organization__c/recordTypes/maxmistral_rt.recordType-meta.xml
<RecordType>
    <fullName>maxmistral_rt</fullName>
    <active>true</active>
    <label>maxmistral</label>
</RecordType>