receiver/force-app/main/receiver/objects/Organization__c/recordTypes/mexico_enterprise_rt.recordType-meta.xml
<RecordType>
    <fullName>mexico_enterprise_rt</fullName>
    <active>true</active>
    <label>mexico enterprise</label>
</RecordType>