receiver/force-app/main/receiver/objects/Organization__c/recordTypes/mexico_openpay_rt.recordType-meta.xml
<RecordType>
    <fullName>mexico_openpay_rt</fullName>
    <active>true</active>
    <label>mexico openpay</label>
</RecordType>