receiver/force-app/main/receiver/objects/Organization__c/recordTypes/mexico_retail_rt.recordType-meta.xml
<RecordType>
    <fullName>mexico_retail_rt</fullName>
    <active>true</active>
    <label>mexico retail</label>
</RecordType>