receiver/force-app/main/receiver/objects/Organization__c/recordTypes/mexico_seguros_rt.recordType-meta.xml
<RecordType>
    <fullName>mexico_seguros_rt</fullName>
    <active>true</active>
    <label>mexico seguros</label>
</RecordType>