receiver/force-app/main/receiver/objects/Organization__c/recordTypes/peru_enterprise_rt.recordType-meta.xml
<RecordType>
    <fullName>peru_enterprise_rt</fullName>
    <active>true</active>
    <label>peru enterprise</label>
</RecordType>