receiver/force-app/main/receiver/objects/Organization__c/recordTypes/peru_retail_rt.recordType-meta.xml
<RecordType>
    <fullName>peru_retail_rt</fullName>
    <active>true</active>
    <label>peru retail</label>
</RecordType>