receiver/force-app/main/receiver/objects/Organization__c/recordTypes/portugal_rt.recordType-meta.xml
<RecordType>
    <fullName>portugal_rt</fullName>
    <active>true</active>
    <label>portugal</label>
</RecordType>