receiver/force-app/main/receiver/objects/Organization__c/recordTypes/standard_rt.recordType-meta.xml
<RecordType>
    <fullName>standard_rt</fullName>
    <active>true</active>
    <label>standard</label>
</RecordType>