receiver/force-app/main/receiver/objects/Organization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Organization_ID__c</columns>
    <columns>Org_URL__c</columns>
    <columns>User__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Detail__c</columns>
    <columns>Total_licenses__c</columns>
    <columns>Used_licenses__c</columns>
    <columns>Licenses_percentage__c</columns>
    <columns>Last_connection__c</columns>
    <columns>Asleep_users__c</columns>
    <filterScope>Everything</filterScope>
    <label>All organizations</label>
</ListView>