receiver/force-app/main/receiver/objects/Organization__c/listViews/Espana_Retail.listView-meta.xml
<ListView>
    <fullName>Espana_Retail</fullName>
    <columns>NAME</columns>
    <columns>eext__Organization_ID__c</columns>
    <columns>eext__Status_Detail__c</columns>
    <columns>eext__Last_connection__c</columns>
    <columns>eext__Asleep_users__c</columns>
    <columns>eext__Used_licenses__c</columns>
    <columns>eext__Total_licenses__c</columns>
    <columns>eext__Licenses_percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>España Retail</value>
    </filters>
    <label>España Retail</label>
</ListView>